# Image-Segmentation-Pipeline

./: .gitignore  README.md  error.txt  evaluate.py  requirements.txt  run_ablation.py  test_deeplab.py  train.py
configs/: ablation_augmentation.yaml  ablation_models.yaml  default.yaml
cpp/opencv_postprocessing/: CMakeLists.txt  postprocessing.cpp  postprocessing.hpp
notebooks/: demo.ipynb
src/augmentation/: __init__.py  transforms.py
src/datasets/: __init__.py  segmentation_dataset.py
src/evaluation/: __init__.py  ablation.py  evaluator.py  metrics.py
src/models/: __init__.py  deeplabv3.py  unet.py
src/postprocessing/: __init__.py  postprocess.py
src/training/: __init__.py  cross_validation.py  trainer.py  transfer.py
src/utils/: __init__.py  config.py  logger.py
